# blog_os_rs

./: Cargo.toml  boot.s  build.rs  linker.ld
.cargo/: config
src/: csr.rs  lib.rs  main.rs  uart.rs
src/csr/: medeleg.rs  mepc.rs  mideleg.rs  mstatus.rs  satp.rs  sie.rs
