[package]
name = "blog_os_rs"
version = "0.1.0"
authors = ["takuchalle <me@takuchalle.dev>"]
edition = "2018"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

[build-dependencies]
cc = "1.0"
