[package]
name = "blog_os_rs"
version = "0.1.0"
authors = ["takuchalle <me@takuchalle.dev>"]
edition = "2018"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.5.2"
volatile = "0.2.6"
bit_field = "0.10.1"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[build-dependencies]
cc = "1.0"
